--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,14 @@
         <artifactId>jgroups</artifactId>
         <version>4.2.1.Final</version>
     </dependency>
+    
+    <!-- Required for Wildfly thread manager -->
+    <dependency>
+        <groupId>javax.enterprise.concurrent</groupId>
+        <artifactId>javax.enterprise.concurrent-api</artifactId>
+        <version>1.1</version>
+    <scope>provided</scope>
+</dependency>
 
   </dependencies>
 
